// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Start Experiment workflow renders correctly 1`] = `
"<Styled(div)>
  <h3 style={{...}}>
    Cluster Pair
  </h3>
  <TextField label=\\"Downstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
  <TextField label=\\"Upstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
  <TextField label=\\"Percentage of Requests Served by All Hosts\\" defaultValue=\\"0\\" type=\\"number\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
  <h3 style={{...}}>
    Faults
  </h3>
  <Select name=\\"faultType\\" label=\\"Fault Type\\" options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField label=\\"HTTP Status\\" defaultValue={[undefined]} type=\\"number\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
</Styled(div)>"
`;

exports[`Start Experiment workflow renders correctly with environments 1`] = `
"<Styled(div)>
  <h3 style={{...}}>
    Cluster Pair
  </h3>
  <TextField label=\\"Downstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
  <TextField label=\\"Upstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
  <Select name=\\"environmentValue\\" label=\\"Environment\\" options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField label=\\"Percentage of Requests Served by All Hosts\\" defaultValue=\\"0\\" type=\\"number\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
  <h3 style={{...}}>
    Faults
  </h3>
  <Select name=\\"faultType\\" label=\\"Fault Type\\" options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField label=\\"HTTP Status\\" defaultValue={[undefined]} type=\\"number\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
</Styled(div)>"
`;

exports[`Start Experiment workflow renders correctly with upstream cluster type selection enabled 1`] = `
"<Styled(div)>
  <h3 style={{...}}>
    Cluster Pair
  </h3>
  <TextField label=\\"Downstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
  <TextField label=\\"Upstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
  <RadioGroup name=\\"upstreamClusterType\\" label=\\"Upstream Cluster Type\\" disabled={[undefined]} options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField label=\\"Percentage of Requests Served by All Hosts\\" defaultValue=\\"0\\" type=\\"number\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
  <h3 style={{...}}>
    Faults
  </h3>
  <Select name=\\"faultType\\" label=\\"Fault Type\\" options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField label=\\"HTTP Status\\" defaultValue={[undefined]} type=\\"number\\" onChange={[Function: onChange]} error={false} helperText=\\"\\" validation={{...}} />
</Styled(div)>"
`;
